Fix pagination buttons alignment

--- a/_src/sass/components/_button.scss
+++ b/_src/sass/components/_button.scss
@@ -166,6 +166,11 @@
 
 }
 
+/* Fix layout bug where next/previous buttons were slightly above the line. */
+.pagination-item {
+    vertical-align: top;
+}
+
 /* Next/Previous links. */
 .pagination-item-adjacent {
     font-family: $font-family-icons;
